# xorg__app__fdclock

./: ChangeLog  Makefile  Makefile.am  configure.ac  fdclock.c  fdface.c  fdface.h  fdfacepng.c  fdhand.c  fdhand.h  fdlogo.c  fdlogo.h  write_png.c  write_png.h
